--- a/curve.html
+++ b/curve.html
@@ -26,7 +26,7 @@
 			<option>Random</option>
 		</select>
 		<br>
-		<button onclick="newCurve();" style="margin-top:5px;">Render</button>
+		<button onclick="newCurve.call(this);" style="margin-top:5px;">Render</button>
 	</div>
 	<div class="container"></div>
 </body>
